--- a/assets/styles/02_components/_forms.css
+++ b/assets/styles/02_components/_forms.css
@@ -31,14 +31,16 @@
     font-weight: var(--font-weight-semibold);
     display: flex;
     align-items: center;
+    margin-bottom: 0 !important; /* Ensure no bottom margin */
 }
 
 .filter-row {
     display: flex;
     width: 100%;
-    margin-bottom: var(--space-1);
+    margin-bottom: 0 !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
+    align-items: center;
 }
 
 .filter-row.row {
@@ -51,7 +53,7 @@
 }
 
 .filter-row--vertical .filter-label {
-    margin-bottom: var(--space-2);
+    margin-bottom: 0;
 }
 
 .filter-row--vertical .filter-content {
@@ -62,7 +64,7 @@
 .period-type__text {
     font-size: var(--font-size-sm);
     color: var(--color-text-secondary);
-    margin-bottom: var(--space-3);
+    margin-bottom: 0 !important; /* Ensure no bottom margin */
 }
 
 .period-buttons-group {
@@ -88,6 +90,28 @@
     margin: 0;
 }
 
+
+.checklist {
+    display: flex !important;
+    align-items: center !important;
+    margin-top: 0 !important;  /* Space between items */
+    margin-bottom: 0 !important;  /* Space between items */
+    paddding: 0 !important;  /* Space between items */
+}
+
+.checklist .form-check {
+    display: flex;
+    align-items: center;
+    margin-right: 0;  /* Space between items */
+    margin-left: 0.7rem;  /* Space between checkbox and label */
+}
+
+.checklist .form-check-label {
+    display: flex;
+    align-items: center;
+    margin-left: 0.5rem;  /* Space between checkbox and label */
+}
+
 /* Reset core Dash dropdown styles */
 .dash-dropdown {
     /* Remove default Dash styles */
@@ -96,6 +120,7 @@
     display: block;
     width: 100%;
     margin-bottom: 0; /* Ensure no bottom margin */
+    height: 100%;
 }
 
 /* Main dropdown container */
@@ -107,6 +132,7 @@
     margin-bottom: 0; /* Ensure no bottom margin */
     display: block; /* Change from potential flex */
     line-height: 1; /* Reset line height */
+    height: 100%;
 }
 /* Reset Select container */
 .dd-control .Select {
@@ -154,3 +180,4 @@
     align-items: center;  /* Vertically center text */
     min-height: var(--input-height-xs);
 }
+
